--- a/CSS.css
+++ b/CSS.css
@@ -1,6 +1,8 @@
 body {
   font-family: monospace, Helvetica, sans-serif;
   font-size: medium;
+  text-align: center;
+  vertical-align: middle;
   color: white;
   background-color: #0c2e33; 
 }
