Updating class information
-Removed unnecessary code
-Added multiple classes

--- a/CSS.css
+++ b/CSS.css
@@ -7,8 +7,28 @@ body {
   background-color: #0c2e33; 
 }
 
-p.greenText {
-  color: green;
+img.search {
+  
+}
+
+img.stick {
+  
+}
+
+img.rock {
+  
+}
+
+img.hunt {
+  
+}
+
+div.resourceWindow {
+  
+}
+
+div.resourceWindowTab1 {
+  
 }
 
 table.resourceHub {
