--- a/CSS.css
+++ b/CSS.css
@@ -7,19 +7,19 @@ body {
   background-color: #0c2e33; 
 }
 
-img.search {
+img#search {
   
 }
 
-img.stick {
+img#stick {
   
 }
 
-img.rock {
+img#rock {
   
 }
 
-img.hunt {
+img#hunt {
   
 }
 
@@ -27,14 +27,15 @@ div.resourceWindow {
   background-color: black;
   border-color: white;
   border-width: 1px;
-  height: 250px;
-  width: 850px;
+  height: 350px;
+  width: 900px;
   padding: 5px;
 }
 
 div.resourceWindowTab1 {
-  height: 200px;
-  width: 800px;
+  background-color: white;
+  height: 300px;
+  width: 850px;
 }
 
 ul.milestoneGoals {
