--- a/CSS.css
+++ b/CSS.css
@@ -7,19 +7,19 @@ body {
   background-color: #0c2e33; 
 }
 
-img#search {
+#search {
   
 }
 
-img#stick {
+#stick {
   
 }
 
-img#rock {
+#rock {
   
 }
 
-img#hunt {
+#hunt {
   
 }
 
@@ -27,13 +27,14 @@ div.resourceWindow {
   background-color: black;
   border-color: white;
   border-width: 1px;
+  filter: opacity(70%);
   height: 350px;
   width: 900px;
   padding: 5px;
 }
 
 div.resourceWindowTab1 {
-  background-color: white;
+  background-color: #0c2e33;
   height: 300px;
   width: 850px;
 }
