--- a/CSS.css
+++ b/CSS.css
@@ -7,7 +7,7 @@ body {
   background-color: #0c2e33; 
 }
 
-ul.milestoneGoals {
+ul.removeBullets {
   list-style-type: none; 
 }
 
@@ -31,6 +31,10 @@ ul.milestoneGoals {
   
 }
 
+.typicalButton {
+ border-radius: 5px; 
+}
+
 div.resourceWindow {
   background-color: #175760;
   padding: 10px;
@@ -49,7 +53,7 @@ div.resourceWindowIcons {
 }
 
 div.labelStick {
-  list-style-type: none; 
+
 }
 
 table.resourceHub {
